# MREN-203

./: README.md
200/Velocity_and_omega/: Velocity_and_omega.ino
200/wheel_encoder_angular_rate/: wheel_encoder_angular_rate.ino
203 Code/Drive_test/: Drive_test.ino
203 Code/PID/: PID.ino
203 Code/Sharp_range/: Sharp_range.ino
203 Code/Velocity_and_omega/: Velocity_and_omega.ino
203 Code/ar_sr_br/: ar_sr_br.ino
203 Code/reading_imu/: reading_imu.ino
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/my_rover_bringup/lib/my_rover_bringup/: ar_sr_br
ros2_ws/install/my_rover_bringup/share/my_rover_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/my_rover_description/share/my_rover_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/my_rover_navigation/share/my_rover_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/rplidar_ros/lib/rplidar_ros/: rplidar_client  rplidar_node  (+1 more)
ros2_ws/log/: latest_build
ros2_ws/src/my_rover_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/my_rover_bringup/config/: copy.txt  mapper_params_online_async.yaml  nav2_params.yaml
ros2_ws/src/my_rover_bringup/launch/: bringup.launch.py  frames_2026-03-09_10.50.38.gv  lidar.launch.py  nav2.launch.py  robot_state_publisher.launch.py  slam.launch.py
ros2_ws/src/my_rover_bringup/maps/: 203_arena.pgm  203_arena.yaml  my_map.pgm  my_map.yaml
ros2_ws/src/my_rover_bringup/src/: ar_sr_br.py
ros2_ws/src/my_rover_description/: CMakeLists.txt
ros2_ws/src/my_rover_description/urdf/: my_rover.urdf.xacro
ros2_ws/src/my_rover_navigation/: package.xml  setup.cfg  setup.py
(+61 files in other folders)
